Fixed bad column formatting.

--- a/docroot/views/editC_ParameterList.xhtml
+++ b/docroot/views/editC_ParameterList.xhtml
@@ -26,7 +26,7 @@
 							</p:row>
 							<p:row>
 								<p:column style="font-weight: bold;" >Optional Parameters</p:column>
-								<p:column style="font-weight: bold;" colspan="3">
+								<p:column style="font-weight: bold;">
 									<p:dataTable id="optionalParameterTable"
 										var="p"
 										value="#{algorithmEditBacking.parameterList}"
