--- a/docroot/views/editD_ServiceList.xhtml
+++ b/docroot/views/editD_ServiceList.xhtml
@@ -26,7 +26,7 @@
 							</p:row>
 							<p:row>
 								<p:column style="font-weight: bold;" >Web Services</p:column>
-								<p:column style="font-weight: bold;" colspan="3">
+								<p:column style="font-weight: bold;">
 									<p:dataTable id="webServiceTable"
 										var="s"
 										value="#{algorithmEditBacking.serviceList.availableServiceList}"
