--- a/docroot/views/edit.xhtml
+++ b/docroot/views/edit.xhtml
@@ -75,6 +75,10 @@
 									<div align="center" class="ui-widget-header ui-corner-all">
 										<p:commandButton value="Edit"
 	                					action="#{algorithmEditBacking.editRequiredElements()}" />
+										<p:commandButton value="DELETE ALGORITHM"
+	                					action="#{algorithmEditBacking.editRequiredElements()}" />
+										<p:commandButton value="Add New Algorithm"
+	                					action="#{algorithmEditBacking.addNewAlgorithm()}" />
 									</div>
 								</p:column>
 							</p:row>
