--- a/docroot/views/editB_LongDescription.xhtml
+++ b/docroot/views/editB_LongDescription.xhtml
@@ -9,53 +9,42 @@
 	<h:head />
 	<h:body>
 
-		<h:panelGroup id="mainGroupEdit" layout="block" styleClass="backgroundofContent">
+		<h:panelGroup id="longDescEdit" layout="block" styleClass="backgroundofContent">
 			<h:form id="formAlgorithmEditLongDesc">
 				
-						<p:panelGrid id="requiredAttributesGrid" >
-							<p:row>
-								<p:column colspan="2">
-									<div align="center" class="ui-widget-header ui-corner-all">
-										<p:commandButton value="Save"
-			                					action="#{algorithmEditBacking.saveAlgorithm()}" />
-										<p:commandButton id="btnEditMain" value="Home"
-												action="#{algorithmEditBacking.loadMainEdit}"
-												title="Return to the main algorithm edit view." />
-									</div>
-								</p:column>
-							</p:row>
+						<p:panelGrid id="longDescGrid" >
 							<p:row>
 								<p:column style="font-weight: bold;" >Full Description</p:column>
-								<p:column><h:inputTextarea rows="8"  cols="150" value="#{algorithmEditBacking.selectedAlgorithm.displayLongDescription}"/></p:column>
+								<p:column><h:inputTextarea rows="8"  cols="100" value="#{algorithmEditBacking.selectedAlgorithm.displayLongDescription}"/></p:column>
 							</p:row>
 
 							<p:row>
 								<p:column style="font-weight: bold;" >Licence</p:column>
-								<p:column><h:inputTextarea rows="1"  cols="150" value="#{algorithmEditBacking.selectedAlgorithm.licence}"/></p:column>
+								<p:column><h:inputTextarea rows="1"  cols="100" value="#{algorithmEditBacking.selectedAlgorithm.licence}"/></p:column>
 							</p:row>
 							<p:row>
 								<p:column style="font-weight: bold;" >Version (algorithm)</p:column>
-								<p:column><h:inputTextarea rows="1"  cols="150" value="#{algorithmEditBacking.selectedAlgorithm.versionIdAlgorithm}"/></p:column>
+								<p:column><h:inputTextarea rows="1"  cols="100" value="#{algorithmEditBacking.selectedAlgorithm.versionIdAlgorithm}"/></p:column>
 							</p:row>
 							<p:row>
 								<p:column style="font-weight: bold;" >Documentation URL</p:column>
-								<p:column><h:inputTextarea rows="1"  cols="150" value="#{algorithmEditBacking.selectedAlgorithm.URLreference}"/></p:column>
+								<p:column><h:inputTextarea rows="1"  cols="100" value="#{algorithmEditBacking.selectedAlgorithm.URLreference}"/></p:column>
 							</p:row>
 							<p:row>
 								<p:column style="font-weight: bold;" >Version (web service)</p:column>
-								<p:column><h:inputTextarea rows="1"  cols="150" value="#{algorithmEditBacking.selectedAlgorithm.versionIdWebService}"/></p:column>
+								<p:column><h:inputTextarea rows="1"  cols="100" value="#{algorithmEditBacking.selectedAlgorithm.versionIdWebService}"/></p:column>
 							</p:row>
 							<p:row>
 								<p:column style="font-weight: bold;" >Date (algorithm)</p:column>
-								<p:column><h:inputTextarea rows="1"  cols="150" value="#{algorithmEditBacking.selectedAlgorithm.dateAlgorithm}"/></p:column>
+								<p:column><h:inputTextarea rows="1"  cols="100" value="#{algorithmEditBacking.selectedAlgorithm.dateAlgorithm}"/></p:column>
 							</p:row>
 							<p:row>
 								<p:column style="font-weight: bold;" >Date (web service)</p:column>
-								<p:column><h:inputTextarea rows="1"  cols="150" value="#{algorithmEditBacking.selectedAlgorithm.dateWebService}"/></p:column>
+								<p:column><h:inputTextarea rows="1"  cols="100" value="#{algorithmEditBacking.selectedAlgorithm.dateWebService}"/></p:column>
 							</p:row>
 							<p:row>
 								<p:column style="font-weight: bold;" >Documentation URL</p:column>
-								<p:column><h:inputTextarea rows="1"  cols="150" value="#{algorithmEditBacking.selectedAlgorithm.URLreference}"/></p:column>
+								<p:column><h:inputTextarea rows="1"  cols="100" value="#{algorithmEditBacking.selectedAlgorithm.URLreference}"/></p:column>
 							</p:row>
 							
 						</p:panelGrid>	
