--- a/docroot/views/editC_ParameterList.xhtml
+++ b/docroot/views/editC_ParameterList.xhtml
@@ -9,24 +9,9 @@
 	<h:head />
 	<h:body>
 
-		<h:panelGroup id="mainGroupEdit" layout="block" styleClass="backgroundofContent">
-			<h:form id="formAlgorithmEditLongDesc">
+		<h:panelGroup id="paramEdit" layout="block" styleClass="backgroundofContent">
+			<h:form id="formAlgorithmEditParam">
 				
-						<p:panelGrid id="requiredAttributesGrid" >
-							<p:row>
-								<p:column colspan="2">
-									<div align="center" class="ui-widget-header ui-corner-all">
-										<p:commandButton value="Save"
-			                					action="#{algorithmEditBacking.saveAlgorithm()}" />
-										<p:commandButton id="btnEditMain" value="Home"
-												action="#{algorithmEditBacking.loadMainEdit}"
-												title="Return to the main algorithm edit view." />
-									</div>
-								</p:column>
-							</p:row>
-							<p:row>
-								<p:column style="font-weight: bold;" >Optional Parameters</p:column>
-								<p:column style="font-weight: bold;">
 									<p:dataTable id="optionalParameterTable"
 										var="p"
 										value="#{algorithmEditBacking.parameterList}"
@@ -43,18 +28,18 @@
 										rowsPerPageTemplate="5,10,15,20" 
 										emptyMessage="No parameter options found for this algorithm">
 										
-			 							<p:column headerText="ID"  width="5%">
+			 							<p:column headerText="ID"  style="width:20px;">
 											<h:outputLabel 
 												value="#{p.id}"  
 												title="Optional Parameter's ID in the database (Primary Key)" />
 										</p:column>
 					 
-										<p:column headerText="Name" width="15%">
+										<p:column headerText="Name" style="width:100px;">
 											<h:outputLabel 
 												value="#{p.displayShortName}" />
 										</p:column>
 					
-										<p:column headerText="Tooltip" width="25%">
+										<p:column headerText="Tooltip" style="width:300px;">
 											<h:outputLabel 
 												value="#{p.toolTipDescription}"
 												title="#{p.longDescription}"/>								
@@ -65,11 +50,64 @@
 												value="#{p.longDescription}"
 												title="#{p.toolTipDescription}"/>								
 										</p:column>
+										<p:column  style="width:40px;">
+										    <p:commandButton id="BtnParamEdit" value="Edit" type="button" />
+   											<p:overlayPanel id="paramEditPanel" for="BtnParamEdit" hideEffect="fade" dynamic="true" style="width:800px;height:300px"  showCloseIcon="true">
+   												<p:panelGrid>
+												    <f:facet name="header">
+												        <p:row>
+												            <p:column colspan="2">Edit then Save</p:column>
+												        </p:row>												 
+												    </f:facet>   													
+   													
+   													<p:row>
+						 								<p:column width="50px" ><h:outputLabel value ="ID"/> </p:column>
+														<p:column >
+															<h:outputText 
+																value="#{p.id}" 
+																title="Optional Parameter's ID in the database (Primary Key)" />
+														 </p:column>
+								 					</p:row>
+													<p:row>
+						 								<p:column width="50px" ><h:outputLabel value ="Name"/></p:column>
+														<p:column >
+															<h:inputText 
+															value="#{p.displayShortName}" 
+															size="150"/>
+														 </p:column>
+								 					</p:row>
+								
+													<p:row>
+						 								<p:column width="50px" ><h:outputLabel value ="Tooltip"/></p:column>
+														<p:column >
+															<h:inputText 
+															value="#{p.toolTipDescription}"
+															size="150"/>
+														 </p:column>
+								 					</p:row>	
+			
+													<p:row>
+						 								<p:column width="50px" ><h:outputLabel value ="Description"/></p:column>
+														<p:column >
+															<h:inputText 
+															value="#{p.longDescription}"
+															size="150"/>
+														 </p:column>
+								 					</p:row>
+														
+													<p:row>
+						 								<p:column width="50px" colspan="2">
+							 								<p:commandButton value="Save"
+					                							action="#{algorithmEditBacking.saveAlgorithm()}" />
+														</p:column>
+								 					</p:row>
+														 
+				                				</p:panelGrid>		
+			    							</p:overlayPanel>						
+										</p:column>
+										
 									</p:dataTable>	
-								</p:column>															
-							</p:row>
-							
-						</p:panelGrid>	
+								
 			</h:form>
 		</h:panelGroup>
 
