--- a/docroot/views/editD_ServiceList.xhtml
+++ b/docroot/views/editD_ServiceList.xhtml
@@ -9,69 +9,110 @@
 	<h:head />
 	<h:body>
 
-		<h:panelGroup id="mainGroupEdit" layout="block" styleClass="backgroundofContent">
-			<h:form id="formAlgorithmEditLongDesc">
-				
-						<p:panelGrid id="webServiceGrid" >
-							<p:row>
-								<p:column colspan="2">
-									<div align="center" class="ui-widget-header ui-corner-all">
-										<p:commandButton value="Save"
-			                					action="#{algorithmEditBacking.saveAlgorithm()}" />
-										<p:commandButton id="btnEditMain" value="Home"
-												action="#{algorithmEditBacking.loadMainEdit}"
-												title="Return to the main algorithm edit view." />
-									</div>
-								</p:column>
-							</p:row>
-							<p:row>
-								<p:column style="font-weight: bold;" >Web Services</p:column>
-								<p:column style="font-weight: bold;">
-									<p:dataTable id="webServiceTable"
-										var="s"
-										value="#{algorithmEditBacking.serviceList.availableServiceList}"
-										rowKey="#{s.id}"
-										paginator="true" 
-										rows="20"
-										rowIndexVar="indexService"
-										resizableColumns="true" 
-										resizable="false"										
-										collapsible="false" 
-										paginatorAlwaysVisible="false"
-										paginatorPosition="top"
-										paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-										rowsPerPageTemplate="5,10,15,20" 
-										emptyMessage="No parameter options found for this algorithm">
-										
-			 							<p:column headerText="ID"  width="5%">
-											<h:outputLabel 
-												value="#{s.id}"  
-												title="Web Service's ID in the database (Primary Key)" />
-										</p:column>
-					 
-										<p:column headerText="Display Name" width="15%">
-											<h:outputLabel 
-												value="#{s.displayServiceName}" 
-												title="Human friendly name of the service to be used by the UI when listing services."/>
-										</p:column>
-					
-										<p:column headerText="Service's Name" width="15%">
-											<h:outputLabel 
-												value="#{s.serviceName}" 
-												title="The web service’s name to be used in the URL when calling the service.   e.g. 'physionetAnalysisService'"/>
-										</p:column>
-					
-										<p:column headerText="URL" width="25%">
-											<h:outputLabel 
-												value="#{s.url}"
-												title="URL of the web service."/>								
-										</p:column>
+		<h:panelGroup id="webServiceEdit" layout="block" styleClass="backgroundofContent">
+			<h:form id="formAlgorithmEditWebService">
 
-									</p:dataTable>	
-								</p:column>															
-							</p:row>
-							
-						</p:panelGrid>	
+	
+				<p:dataTable id="webServiceTable"
+					var="s"
+					value="#{algorithmEditBacking.serviceList.availableServiceList}"
+					rowKey="#{s.id}"
+					paginator="true" 
+					rows="20"
+					rowIndexVar="indexService"
+					resizableColumns="true" 
+					resizable="false"										
+					collapsible="false" 
+					paginatorAlwaysVisible="false"
+					paginatorPosition="top"
+					paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+					rowsPerPageTemplate="5,10,15,20" 
+					emptyMessage="No parameter options found for this algorithm">
+					
+						<p:column headerText="ID" style="width:20px;">
+						<h:outputLabel 
+							value="#{s.id}"  
+							title="Web Service's ID in the database (Primary Key)" />
+					</p:column>
+ 
+					<p:column headerText="Display Name" style="width:200px;">
+						<h:outputLabel 
+							value="#{s.displayServiceName}" 
+							title="Human friendly name of the service to be used by the UI when listing services."/>
+					</p:column>
+
+					<p:column headerText="Service's Name" style="width:250px;">
+						<h:outputLabel 
+							value="#{s.serviceName}" 
+							title="The web service’s name to be used in the URL when calling the service.   e.g. 'physionetAnalysisService'"/>
+					</p:column>
+
+					<p:column headerText="URL">
+						<h:outputLabel 
+							value="#{s.url}"
+							title="URL of the web service."/>								
+					</p:column>
+					<p:column style="width:40px;">
+					    <p:commandButton id="BtnServiceEdit" value="Edit" type="button" />
+						<p:overlayPanel id="serviceEditPanel" for="BtnServiceEdit" hideEffect="fold" showEffect="explode" showCloseIcon="true"
+							dismissable="false" dynamic="false" style="width:800px;height:250px" >
+							<p:panelGrid>
+							    <f:facet name="header">
+							        <p:row>
+							            <p:column colspan="2">Edit then Save</p:column>
+							        </p:row>												 
+							    </f:facet>   													
+											
+											<p:row>
+	 								<p:column width="50px" ><h:outputLabel value ="ID"/> </p:column>
+									<p:column >
+										<h:outputText 
+											value="#{s.id}" 
+											title="Web Service's ID in the database (Primary Key)"
+											size="25" />
+									 </p:column>
+			 					</p:row>
+								<p:row>
+	 								<p:column width="50px" ><h:outputLabel value ="Display Name"/></p:column>
+									<p:column >
+										<h:inputText 
+											value="#{s.displayServiceName}" 
+											title="Human friendly name of the service to be used by the UI when listing services."
+											size="15"/>
+									 </p:column>
+			 					</p:row>
+			
+								<p:row>
+	 								<p:column width="50px" ><h:outputLabel value ="Service's Name"/></p:column>
+									<p:column >
+										<h:inputText 
+											value="#{s.serviceName}" 
+											title="The web service’s name to be used in the URL when calling the service.   e.g. 'physionetAnalysisService'"
+											size="250"/>
+									 </p:column>
+			 					</p:row>	
+
+								<p:row>
+	 								<p:column width="50px" ><h:outputLabel value ="URL"/></p:column>
+									<p:column >
+										<h:inputText 
+											value="#{s.url}"
+											title="URL of the web service."
+											size="150"/>
+									 </p:column>
+			 					</p:row>
+									
+								<p:row>
+	 								<p:column width="50px" colspan="2">
+		 								<p:commandButton value="Save"
+                							action="#{algorithmEditBacking.saveAlgorithm()}" />
+									</p:column>
+			 					</p:row>
+									 
+               				</p:panelGrid>		
+  							</p:overlayPanel>						
+					</p:column>
+				</p:dataTable>	
 			</h:form>
 		</h:panelGroup>
 
