--- a/docroot/views/editM_Tabpage.xhtml
+++ b/docroot/views/editM_Tabpage.xhtml
@@ -12,6 +12,7 @@
 		<h:panelGroup id="mainTabPanel" layout="block" styleClass="backgroundofContent">
 			<h:form id="formAlgorithmEditMenuTab">
 				<div align="center" class="ui-widget-header ui-corner-all">
+					<h:outputText  value="Editing #{algorithmEditBacking.selectedAlgorithm.displayShortName}" />
 					<p:commandButton value="Save"
 	             					action="#{algorithmEditBacking.saveAlgorithm()}" />
 					<p:commandButton id="btnEditMain" value="Back to List"
@@ -26,22 +27,22 @@
 							title="Add a new Service entry to the database, Edit it using the edit buttons below."/>
 							
 				</div>
-	
-				<p:tabView  scrollable="false"  style="width:100%;" >
-					<p:tab title="Required Elements"  titletip="These elements must all be correctly entered in order for the analysis algortithm to be used by Waveform.">
-						<ui:include src="editA_RequiredElements.xhtml" />
-					</p:tab>
-					<p:tab title="Extra Details"  titletip="These elements provide documentation of the analysis algorithm.">
-						<ui:include src="editB_LongDescription.xhtml" />
-					</p:tab>
-					<p:tab title="Algorithm Options"  titletip="This allows advanced capabilities and options of an algorithm to be specified">
-						<ui:include src="editC_ParameterList.xhtml" />
-					</p:tab>
-					<p:tab title="Web Services" titletip="List of web services which contain algorithm methods.">
-						<ui:include src="editD_ServiceList.xhtml" />
-					</p:tab>
-				</p:tabView>
 			</h:form>
+	
+			<p:tabView  scrollable="false"  style="width:100%;" >
+				<p:tab title="Required Elements"  titletip="These elements must all be correctly entered in order for the analysis algortithm to be used by Waveform.">
+					<ui:include src="editA_RequiredElements.xhtml" />
+				</p:tab>
+				<p:tab title="Extra Details"  titletip="These elements provide documentation of the analysis algorithm.">
+					<ui:include src="editB_LongDescription.xhtml" />
+				</p:tab>
+				<p:tab title="Algorithm Options"  titletip="This allows advanced capabilities and options of an algorithm to be specified">
+					<ui:include src="editC_ParameterList.xhtml" />
+				</p:tab>
+				<p:tab title="Web Services" titletip="List of web services which contain algorithm methods.">
+					<ui:include src="editD_ServiceList.xhtml" />
+				</p:tab>
+			</p:tabView>
 		</h:panelGroup>
 
 	</h:body>
