--- a/docroot/views/editD_ServiceList.xhtml
+++ b/docroot/views/editD_ServiceList.xhtml
@@ -105,7 +105,7 @@
 								<p:row>
 	 								<p:column width="50px" colspan="2">
 		 								<p:commandButton value="Save"
-                							action="#{algorithmEditBacking.saveAlgorithm()}" />
+                							action="#{algorithmEditBacking.updateService(s.id)}" />
 									</p:column>
 			 					</p:row>
 									 
