--- a/docroot/views/editM_Tabpage.xhtml
+++ b/docroot/views/editM_Tabpage.xhtml
@@ -39,7 +39,7 @@
 				<p:tab title="Algorithm Options"  titletip="This allows advanced capabilities and options of an algorithm to be specified">
 					<ui:include src="editC_ParameterList.xhtml" />
 				</p:tab>
-				<p:tab title="Web Services" titletip="List of web services which contain algorithm methods.">
+				<p:tab title="Web Services ( #{p:component('webServiceEdit')} )" titletip="List of web services which contain algorithm methods.">
 					<ui:include src="editD_ServiceList.xhtml" />
 				</p:tab>
 			</p:tabView>
